manifests.yaml
---
# Source: deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-svc-stable
  annotations:
    prometheus.io/fastscrape: 'true'
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: rollouts-app
---
# Source: deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-svc-canary
  annotations:
    prometheus.io/fastscrape: 'true'
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: rollouts-app
---
# Source: deploy/templates/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rollouts
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: nginx-gateway
  hostnames:
  - "akpdemoapps.link"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /abc-demo-dev
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            replacePrefixMatch: /
            type: ReplacePrefixMatch
    backendRefs:
    - name: rollouts-svc-stable
      port: 80
---
# Source: deploy/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rollouts-app
  template:
    metadata:
      labels:
        app: rollouts-app
    spec:
      containers:
        - image: "ghcr.io/eddiewebb/rollouts:190-blue"
          name: rollouts-app
          ports:
            - containerPort: 8080
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      canaryService: rollouts-svc-canary  # required
      stableService: rollouts-svc-stable # required
      trafficRouting:
        nginx:
          stableIngress: stable-ingress
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 4
      maxSurge: '25%'
      maxUnavailable: 0
      steps:
        - setWeight: 10
        - pause:
            duration: 20s 
        - setWeight: 20
        - analysis:
            templates:
            - templateName: loadgen
        - pause:
            duration: 20s 
        - setWeight: 50
        - pause:
            duration: 1m 
        - setWeight: 75
        - pause:
            duration: 20s 
        - setWeight: 100
